[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/novem___.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://InGameMenu/InGameMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.164706, 0.784314 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Menu" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.0
margin_top = -123.0
margin_right = 284.0
margin_bottom = 123.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="MarginContainer" parent="Menu"]
margin_right = 284.0
margin_bottom = 246.0
custom_constants/margin_right = 80
custom_constants/margin_top = 80
custom_constants/margin_left = 80
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="HBoxContainer" parent="Menu/Panel"]
margin_left = 80.0
margin_top = 80.0
margin_right = 487.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Panel/MenuContainer"]
margin_right = 91.0
margin_bottom = 86.0

[node name="Options" type="VBoxContainer" parent="Menu/Panel/MenuContainer/VBoxContainer"]
margin_right = 91.0
margin_bottom = 86.0

[node name="Restart" type="Label" parent="Menu/Panel/MenuContainer/VBoxContainer/Options"]
margin_right = 91.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="Options" type="Label" parent="Menu/Panel/MenuContainer/VBoxContainer/Options"]
margin_top = 30.0
margin_right = 91.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="Exit" type="Label" parent="Menu/Panel/MenuContainer/VBoxContainer/Options"]
margin_top = 60.0
margin_right = 91.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 2 )
text = "Exit"

[node name="OptionsOptions" type="VBoxContainer" parent="Menu/Panel/MenuContainer"]
margin_left = 141.0
margin_right = 407.0
margin_bottom = 86.0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Panel/MenuContainer/OptionsOptions"]
margin_right = 266.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="SoundToggle" type="Label" parent="Menu/Panel/MenuContainer/OptionsOptions/HBoxContainer"]
margin_right = 190.0
margin_bottom = 26.0
rect_min_size = Vector2( 190, 0 )
custom_fonts/font = SubResource( 2 )
text = "Game Audio"

[node name="SoundToggleValue" type="Label" parent="Menu/Panel/MenuContainer/OptionsOptions/HBoxContainer"]
margin_left = 240.0
margin_right = 266.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "On"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/Panel/MenuContainer/OptionsOptions"]
margin_top = 30.0
margin_right = 266.0
margin_bottom = 56.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="SoundVolume" type="Label" parent="Menu/Panel/MenuContainer/OptionsOptions/HBoxContainer2"]
margin_right = 190.0
margin_bottom = 26.0
rect_min_size = Vector2( 190, 0 )
custom_fonts/font = SubResource( 2 )
text = "Sound Volume"

[node name="SoundVolumeValue" type="Label" parent="Menu/Panel/MenuContainer/OptionsOptions/HBoxContainer2"]
margin_left = 240.0
margin_right = 253.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="Menu/Panel/MenuContainer/OptionsOptions"]
margin_top = 60.0
margin_right = 266.0
margin_bottom = 86.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="MusicVolume" type="Label" parent="Menu/Panel/MenuContainer/OptionsOptions/HBoxContainer3"]
margin_right = 190.0
margin_bottom = 26.0
rect_min_size = Vector2( 190, 0 )
custom_fonts/font = SubResource( 2 )
text = "Music Volume"

[node name="MusicVolumeValue" type="Label" parent="Menu/Panel/MenuContainer/OptionsOptions/HBoxContainer3"]
margin_left = 240.0
margin_right = 253.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
